--- a/register.html
+++ b/register.html
@@ -50,11 +50,13 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import { getDatabase, ref, set, get, runTransaction } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
+    // NOUVELLE CONFIGURATION STARLINK INVESTIT
     const firebaseConfig = {
         apiKey: "AIzaSyA24pBo8mBWiZssPtep--MMBdB7c8_Lu4U",
-        authDomain: "dell-invest.firebaseapp.com",
-        projectId: "dell-invest",
-        storageBucket: "dell-invest.firebasestorage.app",
+        authDomain: "starlink-investit.firebaseapp.com",
+        databaseURL: "https://starlink-investit-default-rtdb.firebaseio.com",
+        projectId: "starlink-investit",
+        storageBucket: "starlink-investit.firebasestorage.app",
         messagingSenderId: "807081599583",
         appId: "1:807081599583:web:e00ec3959bc4acdae031ea"
     };
@@ -62,7 +64,6 @@
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
-    // Capturer le code d'invitation dans l'URL automatiquement
     const urlParams = new URLSearchParams(window.location.search);
     const code = urlParams.get('inviteCode');
     if (code) {
@@ -84,27 +85,26 @@
         status.innerText = "⏳ Liaison satellite...";
 
         try {
-            // 1. Vérifier si le numéro existe déjà
             const userSnap = await get(ref(db, 'users/' + phone));
             if (userSnap.exists()) {
                 status.innerText = "❌ Numéro déjà enregistré";
                 return;
             }
 
-            // 2. Trouver le parrain via son code d'invitation
             let parrainPhone = null;
             if (sponsorCode) {
                 const usersSnap = await get(ref(db, 'users'));
-                const users = usersSnap.val();
-                for (let id in users) {
-                    if (users[id].inviteCode === sponsorCode) {
-                        parrainPhone = id;
-                        break;
+                if (usersSnap.exists()) {
+                    const users = usersSnap.val();
+                    for (let id in users) {
+                        if (users[id].inviteCode === sponsorCode) {
+                            parrainPhone = id;
+                            break;
+                        }
                     }
                 }
             }
 
-            // 3. Créer le nouvel utilisateur
             const myNewCode = "STAR-" + Math.floor(1000 + Math.random() * 9000);
             const userData = {
                 password: pass,
@@ -121,7 +121,6 @@
 
             await set(ref(db, 'users/' + phone), userData);
 
-            // 4. MISE À JOUR DU COMPTEUR DU PARRAIN (IMPORTANT)
             if (parrainPhone) {
                 const parrainCountRef = ref(db, `users/${parrainPhone}/count_lvl1`);
                 await runTransaction(parrainCountRef, (currentCount) => {
