--- a/recharge.html
+++ b/recharge.html
@@ -8,7 +8,8 @@
         :root { --blue: #00d2ff; --dark: #050a14; }
         body { 
             margin: 0; font-family: 'Segoe UI', sans-serif; 
-            background: var(--dark) url('fond_starlink.jpg'); background-size: cover;
+            background: var(--dark) url('IMG_0870.jpeg') no-repeat center center fixed;
+            background-size: cover;
             color: white; display: flex; justify-content: center; align-items: center; min-height: 100vh;
         }
         .card { 
@@ -70,11 +71,13 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import { getDatabase, ref, push, set } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
+    // NOUVELLE CONFIGURATION STARLINK INVESTIT
     const firebaseConfig = {
         apiKey: "AIzaSyA24pBo8mBWiZssPtep--MMBdB7c8_Lu4U",
-        authDomain: "dell-invest.firebaseapp.com",
-        projectId: "dell-invest",
-        storageBucket: "dell-invest.firebasestorage.app",
+        authDomain: "starlink-investit.firebaseapp.com",
+        databaseURL: "https://starlink-investit-default-rtdb.firebaseio.com",
+        projectId: "starlink-investit",
+        storageBucket: "starlink-investit.firebasestorage.app",
         messagingSenderId: "807081599583",
         appId: "1:807081599583:web:e00ec3959bc4acdae031ea"
     };
@@ -83,18 +86,19 @@
     const db = getDatabase(app);
     const userPhone = localStorage.getItem("userPhone");
 
-    // Fonction pour sélectionner les cases
+    if(!userPhone) window.location.href = "login.html";
+
     window.setAmount = (val) => {
         document.getElementById("rechargeAmount").value = val;
         document.querySelectorAll('.price-item').forEach(item => item.classList.remove('active'));
-        event.target.classList.add('active');
+        if(event) event.target.classList.add('active');
     };
 
     document.getElementById("btnSubmit").onclick = async () => {
         const amount = document.getElementById("rechargeAmount").value;
         const tid = document.getElementById("transID").value.trim();
 
-        if(amount < 5000) return alert("Le montant minimum est de 5000 FC");
+        if(!amount || amount < 5000) return alert("Le montant minimum est de 5000 FC");
         if(tid.length < 5) return alert("Veuillez entrer un ID de transaction valide");
 
         try {
@@ -102,16 +106,17 @@
             const newRequest = push(rechargeRef);
             await set(newRequest, {
                 telephone: userPhone,
-                montant: amount,
+                montant: parseInt(amount),
                 transactionID: tid,
                 statut: "En attente",
                 date: new Date().toLocaleString()
             });
 
-            alert("✅ Demande envoyée ! Votre compte sera crédité après vérification de l'administrateur.");
+            alert("✅ Demande envoyée ! Votre compte sera crédité après vérification.");
             window.location.href = "dashboard.html";
         } catch (e) {
             alert("Erreur lors de l'envoi.");
+            console.error(e);
         }
     };
 </script>
