--- a/retrait.html
+++ b/retrait.html
@@ -8,7 +8,7 @@
         :root { --blue: #00d2ff; --dark: #050a14; }
         body { 
             margin: 0; font-family: 'Segoe UI', sans-serif; 
-            background: var(--dark) url('fond_starlink.jpg') no-repeat center center fixed;
+            background: var(--dark) url('IMG_0870.jpeg') no-repeat center center fixed;
             background-size: cover; color: white; display: flex; justify-content: center; align-items: center; min-height: 100vh;
         }
         .card { 
@@ -52,13 +52,15 @@
 
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getDatabase, ref, get, push, set, update } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+    import { getDatabase, ref, get, push, set, update, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
+    // NOUVELLE CONFIGURATION STARLINK INVESTIT
     const firebaseConfig = {
         apiKey: "AIzaSyA24pBo8mBWiZssPtep--MMBdB7c8_Lu4U",
-        authDomain: "dell-invest.firebaseapp.com",
-        projectId: "dell-invest",
-        storageBucket: "dell-invest.firebasestorage.app",
+        authDomain: "starlink-investit.firebaseapp.com",
+        databaseURL: "https://starlink-investit-default-rtdb.firebaseio.com",
+        projectId: "starlink-investit",
+        storageBucket: "starlink-investit.firebasestorage.app",
         messagingSenderId: "807081599583",
         appId: "1:807081599583:web:e00ec3959bc4acdae031ea"
     };
@@ -67,34 +69,41 @@
     const db = getDatabase(app);
     const userPhone = localStorage.getItem("userPhone");
 
-    // Charger le solde actuel
+    if(!userPhone) window.location.href = "login.html";
+
+    // Charger le solde en temps réel
     const userRef = ref(db, 'users/' + userPhone);
-    get(userRef).then(snap => {
+    onValue(userRef, (snap) => {
         if(snap.exists()) {
-            document.getElementById("displayGains").innerText = Math.floor(snap.val().solde_gains || 0).toLocaleString();
+            const data = snap.val();
+            // On additionne solde_gains et solde_commissions pour le retrait si tu le souhaites, 
+            // ou on reste uniquement sur solde_gains. Ici on utilise solde_gains (collecte machines).
+            document.getElementById("displayGains").innerText = Math.floor(data.solde_gains || 0).toLocaleString();
         }
     });
 
     document.getElementById("btnSubmit").onclick = async () => {
         const amount = parseFloat(document.getElementById("amount").value);
-        const wallet = document.getElementById("wallet").value;
+        const wallet = document.getElementById("wallet").value.trim();
         const method = document.getElementById("method").value;
         const status = document.getElementById("status");
 
-        const snap = await get(userRef);
-        const soldeActuel = snap.val().solde_gains || 0;
-
-        if (isNaN(amount) || amount < 5000) return alert("Minimum de retrait : 5000 FC");
-        if (amount > soldeActuel) return alert("Solde insuffisant !");
-        if (wallet.length < 10) return alert("Numéro de réception invalide");
-
-        status.innerText = "Envoi de la demande...";
-
         try {
-            // 1. Déduire l'argent immédiatement du solde (pour éviter les triches)
+            const snap = await get(userRef);
+            if(!snap.exists()) return;
+            const soldeActuel = snap.val().solde_gains || 0;
+
+            if (isNaN(amount) || amount < 5000) return alert("Minimum de retrait : 5000 FC");
+            if (amount > soldeActuel) return alert("Solde insuffisant !");
+            if (wallet.length < 10) return alert("Numéro de réception invalide");
+
+            status.innerText = "⏳ Transmission satellite...";
+            document.getElementById("btnSubmit").disabled = true;
+
+            // 1. Déduire l'argent immédiatement
             await update(userRef, { solde_gains: soldeActuel - amount });
 
-            // 2. Envoyer la demande à l'admin
+            // 2. Créer la demande
             const retraitRef = ref(db, 'demandes_retraits');
             const nouvelleDemande = push(retraitRef);
             await set(nouvelleDemande, {
@@ -106,10 +115,11 @@
                 date: new Date().toLocaleString()
             });
 
-            alert("✅ Demande envoyée ! Vous recevrez vos fonds après vérification.");
+            alert("✅ Demande reçue. Vos fonds arriveront sous peu.");
             window.location.href = "profil.html";
         } catch (e) {
-            alert("Erreur réseau");
+            alert("⚠️ Erreur de liaison réseau.");
+            document.getElementById("btnSubmit").disabled = false;
         }
     };
 </script>
