--- a/transactions.html
+++ b/transactions.html
@@ -12,25 +12,22 @@
             background-size: cover; color: white; padding-bottom: 80px;
         }
         .header { padding: 25px; text-align: center; background: rgba(0,0,0,0.7); border-bottom: 1px solid var(--blue); backdrop-filter: blur(10px); }
-        
         .container { padding: 15px; }
         .tabs { display: flex; gap: 10px; margin-bottom: 20px; }
         .tab-btn { flex: 1; padding: 12px; border: 1px solid var(--blue); background: transparent; color: white; border-radius: 10px; cursor: pointer; font-weight: bold; }
         .tab-btn.active { background: var(--blue); color: black; }
-
         .list-container { display: none; }
         .list-container.active { display: block; }
-
         .trans-card { 
             background: var(--glass); border: 1px solid rgba(255,255,255,0.1); 
             padding: 15px; border-radius: 15px; margin-bottom: 10px;
             backdrop-filter: blur(10px); display: flex; justify-content: space-between; align-items: center;
         }
-        .status-wait { color: #ffeb3b; font-size: 12px; }
-        .status-ok { color: #4caf50; font-size: 12px; }
+        .status-En-attente { color: #ffeb3b; font-size: 12px; }
+        .status-Validé { color: #4caf50; font-size: 12px; }
+        .status-Rejeté { color: #f44336; font-size: 12px; }
         .amount { font-weight: bold; font-size: 16px; }
-        .date { font-size: 10px; opacity: 0.5; }
-
+        .date { font-size: 10px; opacity: 0.5; margin-top: 4px; }
         .navbar { 
             position: fixed; bottom: 0; width: 100%; background: rgba(5, 10, 20, 0.98); 
             display: flex; justify-content: space-around; padding: 15px 0; 
@@ -52,15 +49,11 @@
     </div>
 
     <div id="depots" class="list-container active">
-        <div id="listeDepots">
-            <p style="text-align:center; opacity:0.5;">Chargement des dépôts...</p>
-        </div>
+        <div id="listeDepots"><p style="text-align:center; opacity:0.5;">Liaison satellite...</p></div>
     </div>
 
     <div id="retraits" class="list-container">
-        <div id="listeRetraits">
-            <p style="text-align:center; opacity:0.5;">Chargement des retraits...</p>
-        </div>
+        <div id="listeRetraits"><p style="text-align:center; opacity:0.5;">Liaison satellite...</p></div>
     </div>
 </div>
 
@@ -77,9 +70,10 @@
 
     const firebaseConfig = {
         apiKey: "AIzaSyA24pBo8mBWiZssPtep--MMBdB7c8_Lu4U",
-        authDomain: "dell-invest.firebaseapp.com",
-        projectId: "dell-invest",
-        storageBucket: "dell-invest.firebasestorage.app",
+        authDomain: "starlink-investit.firebaseapp.com",
+        databaseURL: "https://starlink-investit-default-rtdb.firebaseio.com",
+        projectId: "starlink-investit",
+        storageBucket: "starlink-investit.firebasestorage.app",
         messagingSenderId: "807081599583",
         appId: "1:807081599583:web:e00ec3959bc4acdae031ea"
     };
@@ -88,7 +82,6 @@
     const db = getDatabase(app);
     const userPhone = localStorage.getItem("userPhone");
 
-    // Gestion des onglets
     window.showTab = (id, btn) => {
         document.querySelectorAll('.list-container').forEach(c => c.classList.remove('active'));
         document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
@@ -96,50 +89,52 @@
         btn.classList.add('active');
     };
 
-    // Charger l'historique des Dépôts (Recharges)
+    // Historique des Dépôts
     onValue(ref(db, 'demandes_recharges'), (snap) => {
         const list = document.getElementById("listeDepots");
         list.innerHTML = "";
         let count = 0;
         snap.forEach(child => {
             const data = child.val();
-            if(data.phone === userPhone) {
+            if(data.telephone === userPhone) {
                 count++;
+                const statusClass = "status-" + (data.statut || "En-attente").replace(" ", "-");
                 list.innerHTML += `
                     <div class="trans-card">
                         <div>
-                            <div class="amount">+ ${data.montant} FC</div>
-                            <div class="date">ID: ${data.transactionID}</div>
+                            <div class="amount">+ ${parseInt(data.montant).toLocaleString()} FC</div>
+                            <div class="date">${data.date}</div>
                         </div>
-                        <div class="status-wait">⏳ En attente</div>
+                        <div class="${statusClass}">${data.statut || "En attente"}</div>
                     </div>
                 `;
             }
         });
-        if(count === 0) list.innerHTML = "<p style='text-align:center; opacity:0.5;'>Aucun dépôt récent.</p>";
+        if(count === 0) list.innerHTML = "<p style='text-align:center; opacity:0.5;'>Aucun dépôt trouvé.</p>";
     });
 
-    // Charger l'historique des Retraits
+    // Historique des Retraits
     onValue(ref(db, 'demandes_retraits'), (snap) => {
         const list = document.getElementById("listeRetraits");
         list.innerHTML = "";
         let count = 0;
         snap.forEach(child => {
             const data = child.val();
-            if(data.phone === userPhone) {
+            if(data.telephone === userPhone) {
                 count++;
+                const statusClass = "status-" + (data.statut || "En-attente").replace(" ", "-");
                 list.innerHTML += `
                     <div class="trans-card">
                         <div>
-                            <div class="amount">- ${data.montant} FC</div>
-                            <div class="date">${data.reseau}</div>
+                            <div class="amount">- ${parseInt(data.montant).toLocaleString()} FC</div>
+                            <div class="date">${data.methode} - ${data.numero_reception}</div>
                         </div>
-                        <div class="status-wait">⏳ Traitement...</div>
+                        <div class="${statusClass}">${data.statut || "En attente"}</div>
                     </div>
                 `;
             }
         });
-        if(count === 0) list.innerHTML = "<p style='text-align:center; opacity:0.5;'>Aucun retrait récent.</p>";
+        if(count === 0) list.innerHTML = "<p style='text-align:center; opacity:0.5;'>Aucun retrait trouvé.</p>";
     });
 </script>
 </body>
